inventory toDto toEntity methods rewriten with stream class